--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -13,7 +13,7 @@ top_navbar_manage = \u8a2d\u5b9a
 top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
 top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
 top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
-top_navbar_language = English
+top_navbar_language = Language
 top_navbar_lanChinese = Chinese
 top_navbar_lanEnglish = English
 top_navbar_signOut = \u767b\u51fa
