add a group member done

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -42,6 +42,8 @@ teacherManageGroup_h4_importStudent = \u532f\u5165\u5b78\u751f\u540d\u55ae
 teacherManageGroup_h4_uploadFile = \u4e0a\u50b3\u6a94\u6848
 teacherManageGroup_button_close = \u95dc\u9589
 teacherManageGroup_button_send = \u9001\u51fa
+teacherManageGroup_addMember = \u65b0\u589e\u7d44\u54e1
+teacherManageGroup_groupName = \u7d44\u5225\u540d\u7a31
 
 teacherManageStudent_h3_newAllStudent = \u65b0\u589e\u6240\u6709\u5b78\u751f
 teacherManageStudent_h4_uploadStudent = \u4e0a\u50b3\u5b78\u751f\u540d\u55ae
@@ -82,6 +84,8 @@ teacherManageGroup_h4_importStudent = Import list of student
 teacherManageGroup_h4_uploadFile = Upload file
 teacherManageGroup_button_close = Close
 teacherManageGroup_button_send = Send
+teacherManageGroup_addMember = Add a member into a group
+teacherManageGroup_groupName = Group Name
 
 teacherManageStudent_h3_newAllStudent = Create Student Account
 teacherManageStudent_h4_uploadStudent = Upload list of student
