add icon and chnge some design

--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -15,7 +15,7 @@ top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
 top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
 top_navbar_language = \u8a9e\u8a00
 top_navbar_lanChinese = \u4e2d\u6587
-top_navbar_lanEnglish = \u82f1\u6587
+top_navbar_lanEnglish = English
 top_navbar_signOut = \u767b\u51fa
 
 teacherHW_th_studentId = \u5b78\u865f
