fix session language bug and add jenkins checkstyle

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -2,72 +2,38 @@ label_chooseLanguage = Choose Your Language
 li_chinese = Chinese
 li_english = English
 
-index_h2_plzSignIn = \u8acb\u767b\u5165
-index_label_userName = \u7528\u6236\u540d\u7a31
-index_label_password = \u5bc6\u78bc
-index_btn_signIn = \u767b\u5165
-
-top_navbar_dashboard = \u5100\u8868\u677f
-top_navbar_groupProject = \u5c08\u984c
-top_navbar_manage = \u8a2d\u5b9a
-top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
-top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
-top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
-top_navbar_language = Language
-top_navbar_lanChinese = Chinese
-top_navbar_lanEnglish = English
-top_navbar_signOut = \u767b\u51fa
-
-teacherHW_th_studentId = \u5b78\u865f
-teacherHW_th_studentName = \u59d3\u540d
-
-teacherGroup_th_group = \u7d44\u5225
-teacherGroup_th_project = \u5c08\u984c
-teacherGroup_th_student = \u5b78\u751f
-
-teacherManageHW_h3_distributeHW = \u6d3e\u767c\u4f5c\u696d
-teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
-teacherManageHW_input_ifHasExample = \u662f\u5426\u6709\u7bc4\u4f8b\u7a0b\u5f0f
-teacherManageHW_a_downloadMaven = \u4e0b\u8f09Maven\u6a23\u677f
-teacherManageHW_a_downloadJavac = \u4e0b\u8f09Javac\u6a23\u677f
-teacherManageHW_label_zipradio = \u7bc4\u4f8b\u5c08\u6848\u578b\u614b:
-teacherManageHW_label_uploadZip = \u4e0a\u50b3\u7a0b\u5f0f\u7bc4\u4f8b(\u9650zip\u6a94)
-teacherManageHW_label_hwReadme = \u4f5c\u696d\u63cf\u8ff0
-teacherManageHW_button_send = \u9001\u51fa
-
-teacherManageGroup_h3_newGroup = \u65b0\u589e\u7d44\u5225
-teacherManageGroup_a_exportStudent = \u532f\u51fa\u5b78\u751f\u540d\u55ae
-teacherManageGroup_button_importStudent = \u532f\u5165\u5b78\u751f\u540d\u55ae
-teacherManageGroup_h4_importStudent = \u532f\u5165\u5b78\u751f\u540d\u55ae
-teacherManageGroup_h4_uploadFile = \u4e0a\u50b3\u6a94\u6848
-teacherManageGroup_button_close = \u95dc\u9589
-teacherManageGroup_button_send = \u9001\u51fa
-teacherManageGroup_addMember = \u65b0\u589e\u7d44\u54e1
-teacherManageGroup_groupName = \u7d44\u5225\u540d\u7a31
-
-teacherManageStudent_h3_newAllStudent = \u65b0\u589e\u6240\u6709\u5b78\u751f
-teacherManageStudent_h4_uploadStudent = \u4e0a\u50b3\u5b78\u751f\u540d\u55ae
-
-
 index_h2_plzSignIn = Please Sign In
 index_label_userName = Username
 index_label_password = Password
 index_btn_signIn = Enter
 
+top_navbar_backToTop = Top
 top_navbar_dashboard = Dashboard
 top_navbar_groupProject = Group
 top_navbar_manage = Manage
 top_navbar_manageStudent = Manage Student
 top_navbar_manageHW = Manage Homework
 top_navbar_manageGroup = Manage Group
+top_navbar_language = Language
+top_navbar_lanChinese = Chinese
+top_navbar_lanEnglish = English
 top_navbar_signOut = Sign Out
 
-teacherHW_th_studentId = Student ID
-teacherHW_th_studentName = Student Name
+dashboard_th_studentId = Student ID
+dashboard_th_studentName = Student Name
+dashboard_p_compileSuccess = Compile Success
+dashboard_p_compileFail = Compile Failure
+dashboard_p_compileNotYet = Not Compile Yet
+dashboard_a_overview = Overview
+dashboard_a_student = Student
+dashboard_li_studentProjects = Student Projects
+dashboard_li_chart = Statistics Chart
 
 teacherGroup_th_group = Group
 teacherGroup_th_project = Project
 teacherGroup_th_student = Student
+teacherGroup_h5_leader = Leader:
+teacherGroup_h5_member = Member:
 
 teacherManageHW_h3_distributeHW = Distribute Homework
 teacherManageHW_label_hwName = Homework Name
