--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -7,6 +7,7 @@ index_label_userName = \u7528\u6236\u540d\u7a31
 index_label_password = \u5bc6\u78bc
 index_btn_signIn = \u767b\u5165
 
+top_navbar_backToTop = \u56de\u9801\u9996
 top_navbar_dashboard = \u5100\u8868\u677f
 top_navbar_groupProject = \u5c08\u984c
 top_navbar_manage = \u8a2d\u5b9a
@@ -18,12 +19,21 @@ top_navbar_lanChinese = \u4e2d\u6587
 top_navbar_lanEnglish = English
 top_navbar_signOut = \u767b\u51fa
 
-teacherHW_th_studentId = \u5b78\u865f
-teacherHW_th_studentName = \u59d3\u540d
+dashboard_th_studentId = \u5b78\u865f
+dashboard_th_studentName = \u59d3\u540d
+dashboard_p_compileSuccess = \u5efa\u7f6e\u6210\u529f
+dashboard_p_compileFail = \u5efa\u7f6e\u5931\u6557
+dashboard_p_compileNotYet = \u672a\u5efa\u7f6e
+dashboard_a_overview = \u7e3d\u89bd
+dashboard_a_student = \u5b78\u751f
+dashboard_li_studentProjects = \u5b78\u751f\u5c08\u6848
+dashboard_li_chart = \u5716\u8868
 
 teacherGroup_th_group = \u7d44\u5225
 teacherGroup_th_project = \u5c08\u984c
 teacherGroup_th_student = \u5b78\u751f
+teacherGroup_h5_leader = \u7d44\u9577:
+teacherGroup_h5_member = \u7d44\u54e1:
 
 teacherManageHW_h3_distributeHW = \u6d3e\u767c\u4f5c\u696d
 teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
