--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -21,13 +21,20 @@ top_navbar_signOut = Sign Out
 
 dashboard_th_studentId = Student ID
 dashboard_th_studentName = Student Name
+teacherManageHW_label_hwDeadline = Deadline
 dashboard_p_compileSuccess = Compile Success
 dashboard_p_compileFail = Compile Failure
 dashboard_p_compileNotYet = Not Compile Yet
 dashboard_a_overview = Overview
 dashboard_a_student = Student
+dashboard_a_projects = Assignments
 dashboard_li_studentProjects = Student Projects
 dashboard_li_chart = Statistics Chart
+
+stuDashboard_a_projects = All Assignments
+stuDashboard_card_commitRecord = Commit Records
+stuDashboard_card_goToJenkins = View Code Analysis Report
+stuDashboard_card_statisticChart = Statistic Chart
 
 teacherGroup_th_group = Group
 teacherGroup_th_project = Project
