--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -26,8 +26,14 @@ dashboard_p_compileFail = \u5efa\u7f6e\u5931\u6557
 dashboard_p_compileNotYet = \u672a\u5efa\u7f6e
 dashboard_a_overview = \u7e3d\u89bd
 dashboard_a_student = \u5b78\u751f
+dashboard_a_projects = \u4f5c\u696d
 dashboard_li_studentProjects = \u5b78\u751f\u5c08\u6848
 dashboard_li_chart = \u5716\u8868
+
+stuDashboard_a_projects = \u6240\u6709\u4f5c\u696d
+stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
+stuDashboard_card_goToJenkins = \u67e5\u770b\u7a0b\u5f0f\u5206\u6790\u5831\u8868
+stuDashboard_card_statisticChart = \u7d71\u8a08\u5716\u8868
 
 teacherGroup_th_group = \u7d44\u5225
 teacherGroup_th_project = \u5c08\u984c
@@ -35,6 +41,7 @@ teacherGroup_th_student = \u5b78\u751f
 
 teacherManageHW_h3_distributeHW = \u6d3e\u767c\u4f5c\u696d
 teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
+teacherManageHW_label_hwDeadline = \u622a\u6b62\u65e5\u671f
 teacherManageHW_input_ifHasExample = \u662f\u5426\u6709\u7bc4\u4f8b\u7a0b\u5f0f
 teacherManageHW_a_downloadMaven = \u4e0b\u8f09Maven\u6a23\u677f
 teacherManageHW_a_downloadJavac = \u4e0b\u8f09Javac\u6a23\u677f
