fix jenkins api

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -24,6 +24,7 @@ dashboard_th_studentName = Student Name
 teacherManageHW_label_hwDeadline = Deadline
 dashboard_p_compileSuccess = Compile Success
 dashboard_p_compileFail = Compile Failure
+dashboard_p_checkstyleFail = Checkstyle Failure
 dashboard_p_compileNotYet = Not Compile Yet
 dashboard_a_overview = Overview
 dashboard_a_student = Student
