--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -22,7 +22,8 @@ top_navbar_signOut = \u767b\u51fa
 dashboard_th_studentId = \u5b78\u865f
 dashboard_th_studentName = \u59d3\u540d
 dashboard_p_compileSuccess = \u5efa\u7f6e\u6210\u529f
-dashboard_p_compileFail = \u5efa\u7f6e\u5931\u6557
+dashboard_p_compileFail = \u7de8\u8b6f\u5931\u6557
+dashboard_p_checkstyleFail = \u672a\u901a\u904e\u7a0b\u5f0f\u898f\u7bc4
 dashboard_p_compileNotYet = \u672a\u5efa\u7f6e
 dashboard_a_overview = \u7e3d\u89bd
 dashboard_a_student = \u5b78\u751f
