fix student choose project

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -33,6 +33,7 @@ dashboard_li_studentProjects = Student Projects
 dashboard_li_chart = Statistics Chart
 
 stuDashboard_a_projects = All Assignments
+stuDashboard_card_projects = Assignments
 stuDashboard_card_commitRecord = Commit Records
 stuDashboard_card_goToJenkins = View Code Analysis Report
 stuDashboard_card_statisticChart = Statistic Chart
