--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -32,6 +32,7 @@ dashboard_li_studentProjects = \u5b78\u751f\u5c08\u6848
 dashboard_li_chart = \u5716\u8868
 
 stuDashboard_a_projects = \u6240\u6709\u4f5c\u696d
+stuDashboard_card_projects = \u4f5c\u696d
 stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
 stuDashboard_card_goToJenkins = \u67e5\u770b\u7a0b\u5f0f\u5206\u6790\u5831\u8868
 stuDashboard_card_statisticChart = \u7d71\u8a08\u5716\u8868
