--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -25,6 +25,8 @@ teacherManageHW_label_hwDeadline = Deadline
 dashboard_p_compileSuccess = Compile Success
 dashboard_p_compileFail = Compile Failure
 dashboard_p_checkstyleFail = Checkstyle Failure
+dashboard_p_unitTestFail = Unit Test Failure
+dashboard_p_plagiarism = Plagiarism
 dashboard_p_compileNotYet = Not Compile Yet
 dashboard_a_overview = Overview
 dashboard_a_student = Student
@@ -37,6 +39,7 @@ stuDashboard_card_projects = Assignments
 stuDashboard_card_commitRecord = Commit Records
 stuDashboard_card_goToJenkins = View Code Analysis Report
 stuDashboard_card_statisticChart = Statistic Chart
+stuDashboard_li_projects = Projects
 
 teacherGroup_th_group = Group
 teacherGroup_th_project = Project
