--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -24,6 +24,8 @@ dashboard_th_studentName = \u59d3\u540d
 dashboard_p_compileSuccess = \u5efa\u7f6e\u6210\u529f
 dashboard_p_compileFail = \u7de8\u8b6f\u5931\u6557
 dashboard_p_checkstyleFail = \u672a\u901a\u904e\u7a0b\u5f0f\u898f\u7bc4
+dashboard_p_unitTestFail = \u55ae\u5143\u6e2c\u8a66\u932f\u8aa4
+dashboard_p_plagiarism = \u6284\u8972
 dashboard_p_compileNotYet = \u672a\u5efa\u7f6e
 dashboard_a_overview = \u7e3d\u89bd
 dashboard_a_student = \u5b78\u751f
@@ -36,6 +38,7 @@ stuDashboard_card_projects = \u4f5c\u696d
 stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
 stuDashboard_card_goToJenkins = \u67e5\u770b\u7a0b\u5f0f\u5206\u6790\u5831\u8868
 stuDashboard_card_statisticChart = \u7d71\u8a08\u5716\u8868
+stuDashboard_li_projects = \u5c08\u6848
 
 teacherGroup_th_group = \u7d44\u5225
 teacherGroup_th_project = \u5c08\u984c
