--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -34,6 +34,9 @@ dashboard_a_projects = Assignments
 dashboard_li_studentProjects = Student Projects
 dashboard_li_chart = Statistics Chart
 
+stuDashboard_h2_overviewOfAssignments = Overview of Assignments
+stuDashboard_li_overview = Overview
+stuDashboard_li_assignments = Assignments
 stuDashboard_a_projects = All Assignments
 stuDashboard_card_projects = Assignments
 stuDashboard_card_commitRecord = Commit Records
