--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -33,6 +33,9 @@ dashboard_a_projects = \u4f5c\u696d
 dashboard_li_studentProjects = \u5b78\u751f\u5c08\u6848
 dashboard_li_chart = \u5716\u8868
 
+stuDashboard_h2_overviewOfAssignments = \u4f5c\u696d\u7e3d\u89bd
+stuDashboard_li_overview = \u7e3d\u89bd
+stuDashboard_li_assignments = \u4f5c\u696d
 stuDashboard_a_projects = \u6240\u6709\u4f5c\u696d
 stuDashboard_card_projects = \u4f5c\u696d
 stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
