fix change language & add jenkins output jquery

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -37,12 +37,21 @@ dashboard_li_chart = Statistics Chart
 stuDashboard_h2_overviewOfAssignments = Overview of Assignments
 stuDashboard_li_overview = Overview
 stuDashboard_li_assignments = Assignments
+stuDashboard_th_studentId = Student Id
 stuDashboard_a_projects = All Assignments
 stuDashboard_card_projects = Assignments
 stuDashboard_card_commitRecord = Commit Records
 stuDashboard_card_goToJenkins = View Code Analysis Report
 stuDashboard_card_statisticChart = Statistic Chart
 stuDashboard_li_projects = Projects
+
+stuDashChooseProject_p_gitRepo = Git Repository
+stuDashChooseProject_p_cloneUrl = Please clone this repository to your local workspace.
+stuDashChooseProject_h4_codeAnalysisResult = Code Analysis Result
+stuDashChooseProject_h4_programHistory = Programming History
+stuDashChooseProject_th_status = Status
+stuDashChooseProject_th_date = Date
+stuDashChooseProject_th_comment = Comment
 
 teacherGroup_th_group = Group
 teacherGroup_th_project = Project
