--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -36,12 +36,21 @@ dashboard_li_chart = \u5716\u8868
 stuDashboard_h2_overviewOfAssignments = \u4f5c\u696d\u7e3d\u89bd
 stuDashboard_li_overview = \u7e3d\u89bd
 stuDashboard_li_assignments = \u4f5c\u696d
+stuDashboard_th_studentId = \u5b78\u865f
 stuDashboard_a_projects = \u6240\u6709\u4f5c\u696d
 stuDashboard_card_projects = \u4f5c\u696d
 stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
 stuDashboard_card_goToJenkins = \u67e5\u770b\u7a0b\u5f0f\u5206\u6790\u5831\u8868
 stuDashboard_card_statisticChart = \u7d71\u8a08\u5716\u8868
 stuDashboard_li_projects = \u5c08\u6848
+
+stuDashChooseProject_p_gitRepo = Git\u5c08\u6848
+stuDashChooseProject_p_cloneUrl = \u8acb\u8907\u88fd\u6b64\u7db2\u5740\u4e26\u4e0b\u8f09\u5c08\u6848\u5230\u672c\u5730\u7aef
+stuDashChooseProject_h4_codeAnalysisResult = \u7a0b\u5f0f\u78bc\u5206\u6790\u7d50\u679c
+stuDashChooseProject_h4_programHistory = \u6b77\u53f2\u7d00\u9304
+stuDashChooseProject_th_status = \u72c0\u614b
+stuDashChooseProject_th_date = \u65e5\u671f
+stuDashChooseProject_th_comment = \u8a0a\u606f
 
 teacherGroup_th_group = \u7d44\u5225
 teacherGroup_th_project = \u5c08\u984c
