--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -10,10 +10,11 @@ index_btn_signIn = \u767b\u5165
 top_navbar_backToTop = \u56de\u9801\u9996
 top_navbar_dashboard = \u5100\u8868\u677f
 top_navbar_groupProject = \u5c08\u984c
-top_navbar_manage = \u8a2d\u5b9a
+top_navbar_manage = \u7ba1\u7406
 top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
 top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
 top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
+top_navbar_Setting = \u8a2d\u5b9a
 top_navbar_language = \u8a9e\u8a00
 top_navbar_lanChinese = \u4e2d\u6587
 top_navbar_lanEnglish = English
