fix change password

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -14,6 +14,8 @@ top_navbar_manage = Manage
 top_navbar_manageStudent = Manage Student
 top_navbar_manageHW = Manage Homework
 top_navbar_manageGroup = Manage Group
+top_navbar_Setting = Setting
+top_navbar_changePassword = Change Pwd
 top_navbar_language = Language
 top_navbar_lanChinese = Chinese
 top_navbar_lanEnglish = English
