student介面新增作業內容及截止日期

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -49,6 +49,8 @@ stuDashboard_li_projects = Projects
 
 stuDashChooseProject_p_gitRepo = Git Repository
 stuDashChooseProject_p_cloneUrl = Please clone this repository to your local workspace.
+stuDashChooseProject_p_assignmentContent = Assignment Requirement
+stuDashChooseProject_p_deadline = Deadline
 stuDashChooseProject_h4_codeAnalysisResult = Code Analysis Result
 stuDashChooseProject_h4_programHistory = Programming History
 stuDashChooseProject_th_status = Status
