--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -48,6 +48,8 @@ stuDashboard_li_projects = \u5c08\u6848
 
 stuDashChooseProject_p_gitRepo = Git\u5c08\u6848
 stuDashChooseProject_p_cloneUrl = \u8acb\u8907\u88fd\u6b64\u7db2\u5740\u4e26\u4e0b\u8f09\u5c08\u6848\u5230\u672c\u5730\u7aef
+stuDashChooseProject_p_assignmentContent = \u4f5c\u696d\u5167\u5bb9
+stuDashChooseProject_p_deadline = \u622a\u6b62\u65e5\u671f
 stuDashChooseProject_h4_codeAnalysisResult = \u7a0b\u5f0f\u78bc\u5206\u6790\u7d50\u679c
 stuDashChooseProject_h4_programHistory = \u6b77\u53f2\u7d00\u9304
 stuDashChooseProject_th_status = \u72c0\u614b
