--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -13,6 +13,7 @@ top_navbar_groupProject = Group
 top_navbar_manage = Manage
 top_navbar_manageStudent = Manage Student
 top_navbar_manageHW = Manage Homework
+top_navbar_deleteAssignment = Delete Homework
 top_navbar_manageGroup = Manage Group
 top_navbar_Setting = Setting
 top_navbar_changePassword = Change Pwd
@@ -81,3 +82,8 @@ teacherManageGroup_groupName = Group Name
 
 teacherManageStudent_h3_newAllStudent = Create Student Account
 teacherManageStudent_h4_uploadStudent = Upload list of student
+
+deleteAssignment_h4 = Delete Homework
+deleteAssignment_assignmentName = Homework Name
+deleteAssignment_sendButton = Send
+deleteAssignment_attention = \u203b Attention! All homewrork containing this name will be deleted.
