--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -13,6 +13,7 @@ top_navbar_groupProject = \u5c08\u984c
 top_navbar_manage = \u7ba1\u7406
 top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
 top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
+top_navbar_deleteAssignment = \u522a\u9664\u4f5c\u696d
 top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
 top_navbar_Setting = \u8a2d\u5b9a
 top_navbar_changePassword = \u4fee\u6539\u5bc6\u78bc
@@ -83,3 +84,8 @@ teacherManageGroup_groupName = \u7d44\u5225\u540d\u7a31
 
 teacherManageStudent_h3_newAllStudent = \u65b0\u589e\u6240\u6709\u5b78\u751f
 teacherManageStudent_h4_uploadStudent = \u4e0a\u50b3\u5b78\u751f\u540d\u55ae
+
+deleteAssignment_h4 = \u522a\u9664\u4f5c\u696d
+deleteAssignment_assignmentName = \u4f5c\u696d\u540d\u7a31
+deleteAssignment_sendButton = \u9001\u51fa
+deleteAssignment_attention = \u203b \u6ce8\u610f\uff01\u5c07\u6703\u522a\u9664\u6240\u6709\u5305\u542b\u6b64\u4f5c\u696d\u540d\u7a31\u4e4b\u4f5c\u696d.
