Check Style 顏色改為黃色 修改作業管理頁面 新增編輯作業功能 固定sidebar 將commit次數數字置中 改善學生網頁效能(ajax) 修正學生Project build紀錄燈號 修復cookie bug

--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -61,16 +61,26 @@ teacherGroup_th_group = \u7d44\u5225
 teacherGroup_th_project = \u5c08\u984c
 teacherGroup_th_student = \u5b78\u751f
 
-teacherManageHW_h3_distributeHW = \u6d3e\u767c\u4f5c\u696d
+teacherManageHW_h3_distributeHW = \u65b0\u589e\u4f5c\u696d
 teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
 teacherManageHW_label_hwDeadline = \u622a\u6b62\u65e5\u671f
 teacherManageHW_input_ifHasExample = \u662f\u5426\u6709\u7bc4\u4f8b\u7a0b\u5f0f
 teacherManageHW_a_downloadMaven = \u4e0b\u8f09Maven\u6a23\u677f
 teacherManageHW_a_downloadJavac = \u4e0b\u8f09Javac\u6a23\u677f
-teacherManageHW_label_zipradio = \u7bc4\u4f8b\u5c08\u6848\u578b\u614b:
+teacherManageHW_label_zipradio = \u4f5c\u696d\u578b\u614b:
 teacherManageHW_label_uploadZip = \u4e0a\u50b3\u7a0b\u5f0f\u7bc4\u4f8b(\u9650zip\u6a94)
 teacherManageHW_label_hwReadme = \u4f5c\u696d\u63cf\u8ff0
 teacherManageHW_button_send = \u9001\u51fa
+teacherManageHW_hw_list = \u4f5c\u696d\u5217\u8868
+teacherManageHW_hw_name = \u4f5c\u696d\u540d\u7a31
+teacherManageHW_hw_createTime = \u5efa\u7acb\u65e5\u671f
+teacherManageHW_hw_deadline = \u622a\u6b62\u65e5\u671f
+teacherManageHW_hw_edit = \u7de8\u8f2f
+teacherManageHW_hw_delete = \u522a\u9664
+teacherManageHW_hw_edit_modal_title = \u7de8\u8f2f\u4f5c\u696d
+teacherManageHW_hw_delete_modal_title = \u522a\u9664\u4f5c\u696d
+teacherManageHW_hw_delete_modal_content = \u78ba\u5b9a\u8981\u522a\u9664\u4f5c\u696d\u55ce\uff1f
+teacherManageHW_hw_delete_modal_botton = \u78ba\u5b9a
 
 teacherManageGroup_h3_newGroup = \u65b0\u589e\u7d44\u5225
 teacherManageGroup_a_exportStudent = \u532f\u51fa\u5b78\u751f\u540d\u55ae
