--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -11,10 +11,10 @@ top_navbar_backToTop = Top
 top_navbar_dashboard = Dashboard
 top_navbar_groupProject = Group
 top_navbar_manage = Manage
-top_navbar_manageStudent = Manage Student
-top_navbar_manageHW = Manage Homework
-top_navbar_deleteAssignment = Delete Homework
-top_navbar_manageGroup = Manage Group
+top_navbar_manageStudent = Student Management
+top_navbar_manageHW = Assignment Management
+top_navbar_deleteAssignment = Delete Assignment
+top_navbar_manageGroup = Group Management
 top_navbar_Setting = Setting
 top_navbar_changePassword = Change Pwd
 top_navbar_language = Language
@@ -40,7 +40,7 @@ dashboard_li_chart = Statistics Chart
 stuDashboard_h2_overviewOfAssignments = Overview of Assignments
 stuDashboard_li_overview = Overview
 stuDashboard_li_assignments = Assignments
-stuDashboard_th_studentId = Student Id
+stuDashboard_th_studentId = Student ID
 stuDashboard_a_projects = All Assignments
 stuDashboard_card_projects = Assignments
 stuDashboard_card_commitRecord = Commit Records
@@ -62,18 +62,31 @@ teacherGroup_th_group = Group
 teacherGroup_th_project = Project
 teacherGroup_th_student = Student
 
-teacherManageHW_h3_distributeHW = Distribute Homework
-teacherManageHW_label_hwName = Homework Name
+teacherManageHW_h3_distributeHW = Create Assignment
+teacherManageHW_label_hwName = Assignment Name
+teacherManageHW_label_hwDeadline = Deadline
 teacherManageHW_input_ifHasExample = If there is an example?
 teacherManageHW_a_downloadMaven = Download the Maven template
-teacherManageHW_label_uploadZip = Upload your homework example (only pass by zip)
-teacherManageHW_label_hwReadme = Homework ReadMe
+teacherManageHW_a_downloadJavac = Download the Javac template
+teacherManageHW_label_zipradio = Assignment Type: 
+teacherManageHW_label_uploadZip = Upload your Assignment example (only pass by zip)
+teacherManageHW_label_hwReadme = Assignment Requirement
 teacherManageHW_button_send = Send
+teacherManageHW_hw_list = Assignment List
+teacherManageHW_hw_name = Name
+teacherManageHW_hw_createTime = Create time
+teacherManageHW_hw_deadline = Deadline
+teacherManageHW_hw_edit = Edit
+teacherManageHW_hw_delete = Delete
+teacherManageHW_hw_edit_modal_title = Edit Assignment
+teacherManageHW_hw_delete_modal_title = Delete Assignment
+teacherManageHW_hw_delete_modal_content = Are you sure you want to delete this assignment?
+teacherManageHW_hw_delete_modal_botton = Yes
 
-teacherManageGroup_h3_newGroup = New Group
-teacherManageGroup_a_exportStudent = Export list of student
-teacherManageGroup_button_importStudent = Import list of student
-teacherManageGroup_h4_importStudent = Import list of student
+teacherManageGroup_h3_newGroup = Create Group
+teacherManageGroup_a_exportStudent = Export student list
+teacherManageGroup_button_importStudent = Import student list
+teacherManageGroup_h4_importStudent = Import student list
 teacherManageGroup_h4_uploadFile = Upload file
 teacherManageGroup_button_close = Close
 teacherManageGroup_button_send = Send
@@ -81,9 +94,9 @@ teacherManageGroup_addMember = Add a member into a group
 teacherManageGroup_groupName = Group Name
 
 teacherManageStudent_h3_newAllStudent = Create Student Account
-teacherManageStudent_h4_uploadStudent = Upload list of student
+teacherManageStudent_h4_uploadStudent = Upload student list
 
-deleteAssignment_h4 = Delete Homework
-deleteAssignment_assignmentName = Homework Name
+deleteAssignment_h4 = Delete Assignment
+deleteAssignment_assignmentName = Assignment Name
 deleteAssignment_sendButton = Send
-deleteAssignment_attention = \u203b Attention! All homewrork containing this name will be deleted.
+deleteAssignment_attention = \u203b Attention! All assignment containing this name will be deleted.
