--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -66,6 +66,7 @@ teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
 teacherManageHW_label_hwDeadline = \u622a\u6b62\u65e5\u671f
 teacherManageHW_input_ifHasExample = \u662f\u5426\u6709\u7bc4\u4f8b\u7a0b\u5f0f
 teacherManageHW_a_downloadMaven = \u4e0b\u8f09Maven\u6a23\u677f
+teacherManageHW_a_downloadMavenWithoutCheckstyle = \u4e0b\u8f09Maven\u6a23\u677f(No Checkstyle)
 teacherManageHW_a_downloadJavac = \u4e0b\u8f09Javac\u6a23\u677f
 teacherManageHW_label_zipradio = \u4f5c\u696d\u578b\u614b:
 teacherManageHW_label_uploadZip = \u4e0a\u50b3\u7a0b\u5f0f\u7bc4\u4f8b(\u9650zip\u6a94)
