add csv template when create new student account

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -96,6 +96,7 @@ teacherManageGroup_groupName = Group Name
 
 teacherManageStudent_h3_newAllStudent = Create Student Account
 teacherManageStudent_h4_uploadStudent = Upload student list
+teacherManageStudent_a_downloadEnrollmentTemplate = Download Example
 
 deleteAssignment_h4 = Delete Assignment
 deleteAssignment_assignmentName = Assignment Name
