--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -95,6 +95,7 @@ teacherManageGroup_groupName = \u7d44\u5225\u540d\u7a31
 
 teacherManageStudent_h3_newAllStudent = \u65b0\u589e\u6240\u6709\u5b78\u751f
 teacherManageStudent_h4_uploadStudent = \u4e0a\u50b3\u5b78\u751f\u540d\u55ae
+teacherManageStudent_a_downloadEnrollmentTemplate = \u4e0b\u8f09\u7bc4\u4f8b
 
 deleteAssignment_h4 = \u522a\u9664\u4f5c\u696d
 deleteAssignment_assignmentName = \u4f5c\u696d\u540d\u7a31
