support to create a single student account

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -95,6 +95,7 @@ teacherManageGroup_addMember = Add a member into a group
 teacherManageGroup_groupName = Group Name
 
 teacherManageStudent_h3_newAllStudent = Create Student Account
+teacherManageStudent_h3_newAStudent = Create Single Student Account
 teacherManageStudent_h4_uploadStudent = Upload student list
 teacherManageStudent_a_downloadEnrollmentTemplate = Download Example
 
