--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -1,103 +1,104 @@
-label_chooseLanguage = \u9078\u64c7\u8a9e\u8a00
-li_chinese = \u4e2d\u6587
-li_english = \u82f1\u6587
+label_chooseLanguage = \u9078\u64C7\u8A9E\u8A00
+li_chinese = \u4E2D\u6587
+li_english = \u82F1\u6587
 
-index_h2_plzSignIn = \u8acb\u767b\u5165
-index_label_userName = \u7528\u6236\u540d\u7a31
-index_label_password = \u5bc6\u78bc
-index_btn_signIn = \u767b\u5165
+index_h2_plzSignIn = \u8ACB\u767B\u5165
+index_label_userName = \u7528\u6236\u540D\u7A31
+index_label_password = \u5BC6\u78BC
+index_btn_signIn = \u767B\u5165
 
-top_navbar_backToTop = \u56de\u9801\u9996
-top_navbar_dashboard = \u5100\u8868\u677f
-top_navbar_groupProject = \u5c08\u984c
-top_navbar_manage = \u7ba1\u7406
-top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
-top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
-top_navbar_deleteAssignment = \u522a\u9664\u4f5c\u696d
-top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
-top_navbar_Setting = \u8a2d\u5b9a
-top_navbar_changePassword = \u4fee\u6539\u5bc6\u78bc
-top_navbar_language = \u8a9e\u8a00
-top_navbar_lanChinese = \u4e2d\u6587
+top_navbar_backToTop = \u56DE\u9801\u9996
+top_navbar_dashboard = \u5100\u8868\u677F
+top_navbar_groupProject = \u5C08\u984C
+top_navbar_manage = \u7BA1\u7406
+top_navbar_manageStudent = \u5B78\u751F\u7BA1\u7406
+top_navbar_manageHW = \u4F5C\u696D\u7BA1\u7406
+top_navbar_deleteAssignment = \u522A\u9664\u4F5C\u696D
+top_navbar_manageGroup = \u5C08\u984C\u7BA1\u7406
+top_navbar_Setting = \u8A2D\u5B9A
+top_navbar_changePassword = \u4FEE\u6539\u5BC6\u78BC
+top_navbar_language = \u8A9E\u8A00
+top_navbar_lanChinese = \u4E2D\u6587
 top_navbar_lanEnglish = English
-top_navbar_signOut = \u767b\u51fa
+top_navbar_signOut = \u767B\u51FA
 
-dashboard_th_studentId = \u5b78\u865f
-dashboard_th_studentName = \u59d3\u540d
-dashboard_p_compileSuccess = \u5efa\u7f6e\u6210\u529f
-dashboard_p_compileFail = \u7de8\u8b6f\u5931\u6557
-dashboard_p_checkstyleFail = \u672a\u901a\u904e\u7a0b\u5f0f\u898f\u7bc4
-dashboard_p_unitTestFail = \u55ae\u5143\u6e2c\u8a66\u932f\u8aa4
+dashboard_th_studentId = \u5B78\u865F
+dashboard_th_studentName = \u59D3\u540D
+dashboard_p_compileSuccess = \u5EFA\u7F6E\u6210\u529F
+dashboard_p_compileFail = \u7DE8\u8B6F\u5931\u6557
+dashboard_p_checkstyleFail = \u672A\u901A\u904E\u7A0B\u5F0F\u898F\u7BC4
+dashboard_p_unitTestFail = \u55AE\u5143\u6E2C\u8A66\u932F\u8AA4
 dashboard_p_plagiarism = \u6284\u8972
-dashboard_p_compileNotYet = \u672a\u5efa\u7f6e
-dashboard_a_overview = \u7e3d\u89bd
-dashboard_a_student = \u5b78\u751f
-dashboard_a_projects = \u4f5c\u696d
-dashboard_li_studentProjects = \u5b78\u751f\u5c08\u6848
+dashboard_p_compileNotYet = \u672A\u5EFA\u7F6E
+dashboard_a_overview = \u7E3D\u89BD
+dashboard_a_student = \u5B78\u751F
+dashboard_a_projects = \u4F5C\u696D
+dashboard_li_studentProjects = \u5B78\u751F\u5C08\u6848
 dashboard_li_chart = \u5716\u8868
 
-stuDashboard_h2_overviewOfAssignments = \u4f5c\u696d\u7e3d\u89bd
-stuDashboard_li_overview = \u7e3d\u89bd
-stuDashboard_li_assignments = \u4f5c\u696d
-stuDashboard_th_studentId = \u5b78\u865f
-stuDashboard_a_projects = \u6240\u6709\u4f5c\u696d
-stuDashboard_card_projects = \u4f5c\u696d
-stuDashboard_card_commitRecord = \u63d0\u4ea4\u7d00\u9304
-stuDashboard_card_goToJenkins = \u67e5\u770b\u7a0b\u5f0f\u5206\u6790\u5831\u8868
-stuDashboard_card_statisticChart = \u7d71\u8a08\u5716\u8868
-stuDashboard_li_projects = \u5c08\u6848
+stuDashboard_h2_overviewOfAssignments = \u4F5C\u696D\u7E3D\u89BD
+stuDashboard_li_overview = \u7E3D\u89BD
+stuDashboard_li_assignments = \u4F5C\u696D
+stuDashboard_th_studentId = \u5B78\u865F
+stuDashboard_a_projects = \u6240\u6709\u4F5C\u696D
+stuDashboard_card_projects = \u4F5C\u696D
+stuDashboard_card_commitRecord = \u63D0\u4EA4\u7D00\u9304
+stuDashboard_card_goToJenkins = \u67E5\u770B\u7A0B\u5F0F\u5206\u6790\u5831\u8868
+stuDashboard_card_statisticChart = \u7D71\u8A08\u5716\u8868
+stuDashboard_li_projects = \u5C08\u6848
 
-stuDashChooseProject_p_gitRepo = Git\u5c08\u6848
-stuDashChooseProject_p_cloneUrl = \u8acb\u8907\u88fd\u6b64\u7db2\u5740\u4e26\u4e0b\u8f09\u5c08\u6848\u5230\u672c\u5730\u7aef
-stuDashChooseProject_p_assignmentContent = \u4f5c\u696d\u5167\u5bb9
-stuDashChooseProject_p_deadline = \u622a\u6b62\u65e5\u671f
-stuDashChooseProject_h4_codeAnalysisResult = \u7a0b\u5f0f\u78bc\u5206\u6790\u7d50\u679c
-stuDashChooseProject_h4_programHistory = \u6b77\u53f2\u7d00\u9304
-stuDashChooseProject_th_status = \u72c0\u614b
-stuDashChooseProject_th_date = \u65e5\u671f
-stuDashChooseProject_th_comment = \u8a0a\u606f
+stuDashChooseProject_p_gitRepo = Git\u5C08\u6848
+stuDashChooseProject_p_cloneUrl = \u8ACB\u8907\u88FD\u6B64\u7DB2\u5740\u4E26\u4E0B\u8F09\u5C08\u6848\u5230\u672C\u5730\u7AEF
+stuDashChooseProject_p_assignmentContent = \u4F5C\u696D\u5167\u5BB9
+stuDashChooseProject_p_deadline = \u622A\u6B62\u65E5\u671F
+stuDashChooseProject_h4_codeAnalysisResult = \u7A0B\u5F0F\u78BC\u5206\u6790\u7D50\u679C
+stuDashChooseProject_h4_programHistory = \u6B77\u53F2\u7D00\u9304
+stuDashChooseProject_th_status = \u72C0\u614B
+stuDashChooseProject_th_date = \u65E5\u671F
+stuDashChooseProject_th_comment = \u8A0A\u606F
 
-teacherGroup_th_group = \u7d44\u5225
-teacherGroup_th_project = \u5c08\u984c
-teacherGroup_th_student = \u5b78\u751f
+teacherGroup_th_group = \u7D44\u5225
+teacherGroup_th_project = \u5C08\u984C
+teacherGroup_th_student = \u5B78\u751F
 
-teacherManageHW_h3_distributeHW = \u65b0\u589e\u4f5c\u696d
-teacherManageHW_label_hwName = \u4f5c\u696d\u540d\u7a31
-teacherManageHW_label_hwDeadline = \u622a\u6b62\u65e5\u671f
-teacherManageHW_input_ifHasExample = \u662f\u5426\u6709\u7bc4\u4f8b\u7a0b\u5f0f
-teacherManageHW_a_downloadMaven = \u4e0b\u8f09Maven\u6a23\u677f
-teacherManageHW_a_downloadMavenWithoutCheckstyle = \u4e0b\u8f09Maven\u6a23\u677f(No Checkstyle)
-teacherManageHW_a_downloadJavac = \u4e0b\u8f09Javac\u6a23\u677f
-teacherManageHW_label_zipradio = \u4f5c\u696d\u578b\u614b:
-teacherManageHW_label_uploadZip = \u4e0a\u50b3\u7a0b\u5f0f\u7bc4\u4f8b(\u9650zip\u6a94)
-teacherManageHW_label_hwReadme = \u4f5c\u696d\u63cf\u8ff0
-teacherManageHW_button_send = \u9001\u51fa
-teacherManageHW_hw_list = \u4f5c\u696d\u5217\u8868
-teacherManageHW_hw_name = \u4f5c\u696d\u540d\u7a31
-teacherManageHW_hw_createTime = \u5efa\u7acb\u65e5\u671f
-teacherManageHW_hw_deadline = \u622a\u6b62\u65e5\u671f
-teacherManageHW_hw_edit = \u7de8\u8f2f
-teacherManageHW_hw_delete = \u522a\u9664
-teacherManageHW_hw_edit_modal_title = \u7de8\u8f2f\u4f5c\u696d
-teacherManageHW_hw_delete_modal_title = \u522a\u9664\u4f5c\u696d
-teacherManageHW_hw_delete_modal_content = \u78ba\u5b9a\u8981\u522a\u9664\u4f5c\u696d\u55ce\uff1f
-teacherManageHW_hw_delete_modal_botton = \u78ba\u5b9a
+teacherManageHW_h3_distributeHW = \u65B0\u589E\u4F5C\u696D
+teacherManageHW_label_hwName = \u4F5C\u696D\u540D\u7A31
+teacherManageHW_label_hwDeadline = \u622A\u6B62\u65E5\u671F
+teacherManageHW_input_ifHasExample = \u662F\u5426\u6709\u7BC4\u4F8B\u7A0B\u5F0F
+teacherManageHW_a_downloadMaven = \u4E0B\u8F09Maven\u6A23\u677F
+teacherManageHW_a_downloadMavenWithoutCheckstyle = \u4E0B\u8F09Maven\u6A23\u677F(No Checkstyle)
+teacherManageHW_a_downloadJavac = \u4E0B\u8F09Javac\u6A23\u677F
+teacherManageHW_label_zipradio = \u4F5C\u696D\u578B\u614B:
+teacherManageHW_label_uploadZip = \u4E0A\u50B3\u7A0B\u5F0F\u7BC4\u4F8B(\u9650zip\u6A94)
+teacherManageHW_label_hwReadme = \u4F5C\u696D\u63CF\u8FF0
+teacherManageHW_button_send = \u9001\u51FA
+teacherManageHW_hw_list = \u4F5C\u696D\u5217\u8868
+teacherManageHW_hw_name = \u4F5C\u696D\u540D\u7A31
+teacherManageHW_hw_createTime = \u5EFA\u7ACB\u65E5\u671F
+teacherManageHW_hw_deadline = \u622A\u6B62\u65E5\u671F
+teacherManageHW_hw_edit = \u7DE8\u8F2F
+teacherManageHW_hw_delete = \u522A\u9664
+teacherManageHW_hw_edit_modal_title = \u7DE8\u8F2F\u4F5C\u696D
+teacherManageHW_hw_delete_modal_title = \u522A\u9664\u4F5C\u696D
+teacherManageHW_hw_delete_modal_content = \u78BA\u5B9A\u8981\u522A\u9664\u4F5C\u696D\u55CE\uFF1F
+teacherManageHW_hw_delete_modal_botton = \u78BA\u5B9A
 
-teacherManageGroup_h3_newGroup = \u65b0\u589e\u7d44\u5225
-teacherManageGroup_a_exportStudent = \u532f\u51fa\u5b78\u751f\u540d\u55ae
-teacherManageGroup_button_importStudent = \u532f\u5165\u5b78\u751f\u540d\u55ae
-teacherManageGroup_h4_importStudent = \u532f\u5165\u5b78\u751f\u540d\u55ae
-teacherManageGroup_h4_uploadFile = \u4e0a\u50b3\u6a94\u6848
-teacherManageGroup_button_close = \u95dc\u9589
-teacherManageGroup_button_send = \u9001\u51fa
-teacherManageGroup_addMember = \u65b0\u589e\u7d44\u54e1
-teacherManageGroup_groupName = \u7d44\u5225\u540d\u7a31
+teacherManageGroup_h3_newGroup = \u65B0\u589E\u7D44\u5225
+teacherManageGroup_a_exportStudent = \u532F\u51FA\u5B78\u751F\u540D\u55AE
+teacherManageGroup_button_importStudent = \u532F\u5165\u5B78\u751F\u540D\u55AE
+teacherManageGroup_h4_importStudent = \u532F\u5165\u5B78\u751F\u540D\u55AE
+teacherManageGroup_h4_uploadFile = \u4E0A\u50B3\u6A94\u6848
+teacherManageGroup_button_close = \u95DC\u9589
+teacherManageGroup_button_send = \u9001\u51FA
+teacherManageGroup_addMember = \u65B0\u589E\u7D44\u54E1
+teacherManageGroup_groupName = \u7D44\u5225\u540D\u7A31
 
-teacherManageStudent_h3_newAllStudent = \u65b0\u589e\u6240\u6709\u5b78\u751f
-teacherManageStudent_h4_uploadStudent = \u4e0a\u50b3\u5b78\u751f\u540d\u55ae
-teacherManageStudent_a_downloadEnrollmentTemplate = \u4e0b\u8f09\u7bc4\u4f8b
+teacherManageStudent_h3_newAllStudent = \u65B0\u589E\u6240\u6709\u5B78\u751F
+teacherManageStudent_h3_newAStudent = \u65B0\u589E\u55AE\u4E00\u5B78\u751F
+teacherManageStudent_h4_uploadStudent = \u4E0A\u50B3\u5B78\u751F\u540D\u55AE
+teacherManageStudent_a_downloadEnrollmentTemplate = \u4E0B\u8F09\u7BC4\u4F8B
 
-deleteAssignment_h4 = \u522a\u9664\u4f5c\u696d
-deleteAssignment_assignmentName = \u4f5c\u696d\u540d\u7a31
-deleteAssignment_sendButton = \u9001\u51fa
-deleteAssignment_attention = \u203b \u6ce8\u610f\uff01\u5c07\u6703\u522a\u9664\u6240\u6709\u5305\u542b\u6b64\u4f5c\u696d\u540d\u7a31\u4e4b\u4f5c\u696d.
+deleteAssignment_h4 = \u522A\u9664\u4F5C\u696D
+deleteAssignment_assignmentName = \u4F5C\u696D\u540D\u7A31
+deleteAssignment_sendButton = \u9001\u51FA
+deleteAssignment_attention = \u203B \u6CE8\u610F\uFF01\u5C07\u6703\u522A\u9664\u6240\u6709\u5305\u542B\u6B64\u4F5C\u696D\u540D\u7A31\u4E4B\u4F5C\u696D.
