Add upload test case (66%)

--- a/src/main/webapp/WEB-INF/classes/form_en.properties
+++ b/src/main/webapp/WEB-INF/classes/form_en.properties
@@ -83,6 +83,7 @@ teacherManageHW_hw_edit_modal_title = Edit Assignment
 teacherManageHW_hw_delete_modal_title = Delete Assignment
 teacherManageHW_hw_delete_modal_content = Are you sure you want to delete this assignment?
 teacherManageHW_hw_delete_modal_botton = Yes
+teacherManageHW_label_hwTestCase = Test Case
 
 teacherManageGroup_h3_newGroup = Create Group
 teacherManageGroup_a_exportStudent = Export student list
