--- a/src/main/webapp/WEB-INF/classes/form_tw.properties
+++ b/src/main/webapp/WEB-INF/classes/form_tw.properties
@@ -82,6 +82,7 @@ teacherManageHW_hw_edit_modal_title = \u7DE8\u8F2F\u4F5C\u696D
 teacherManageHW_hw_delete_modal_title = \u522A\u9664\u4F5C\u696D
 teacherManageHW_hw_delete_modal_content = \u78BA\u5B9A\u8981\u522A\u9664\u4F5C\u696D\u55CE\uFF1F
 teacherManageHW_hw_delete_modal_botton = \u78BA\u5B9A
+teacherManageHW_label_hwTestCase = \u6E2C\u8A66\u6848\u4F8B
 
 teacherManageGroup_h3_newGroup = \u65B0\u589E\u7D44\u5225
 teacherManageGroup_a_exportStudent = \u532F\u51FA\u5B78\u751F\u540D\u55AE
